--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -1,6 +1,6 @@
 {
 	"reusable": {
-		"logo": " La Finca De Todos",
+		"logo": " La Finca de Todos",
 		"sources": "Sources",
 		"donate": "Donate",
 		"to": "to",
@@ -169,7 +169,7 @@
 		"Cards-4": "Flight Simulator",
 		"paragraphCards-4": "An adaptable cockpit that allows accessible use of Microsoft Flight Simulator, a tool used by real pilots and aviation enthusiasts to experience flying around the world.",
 		"paragraphCards-4-1": "Photo by  House of Wheels, Menash Cohen",
-		"Cards-5": "Path and sensory garden",
+		"Cards-5": "Sensory path and garden",
 		"paragraphCards-5": "Feel with your hands or feet the textures of the countryside, smell the essence of aromatic herbs, and explore a space full of surprises for your senses.",
 		"Cards-6": "Animals on the farm",
 		"paragraphCards-6": "Here we can interact with the animals of the farm in a fully accessible environment to have the experience of milking a goat, feeding the chickens, or collecting eggs from the nests comfortably.",
