--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -28,7 +28,7 @@
 
 	"home": {
 		"altTextVideoHomeBold": "Video compuesto de los siguientes clips:",
-		"altTextVideoHome": " Mariposa sobre una hoja, niña sonriente caminando con andador, paisaje de montañas colombianas, abuelos abrazan su nieto sentados en el césped, tres cabras, una madre besa a su hijo sonriente en su silla de ruedas eléctrica, logo de La Finca De Todos.",
+		"altTextVideoHome": " Mariposa sobre una hoja, niña sonriente caminando con andador, paisaje de montañas colombianas, abuelos abrazan su nieto sentados en el césped, tres cabras, una madre besa a su hijo sonriente en su silla de ruedas eléctrica, logo de La Finca de Todos.",
 		"welcome": "BIENVENIDO",
 		"openingParagraph-1": "¡Este mundo es para disfrutarlo al máximo! Te invitamos a",
 		"openingParagraph-2": ", un lugar hecho para todos.",
@@ -137,8 +137,8 @@
 	},
 
 	"theFarm": {
-		"title3D": "Modelo 3D de la finca y sus edificaciones",
-		"altTextVideo3d": "Video en 3D de La Finca De Todos, mostrando su estructura, espacios e información.",
+		"title3D": "Modelo 3D de La Finca y sus edificaciones",
+		"altTextVideo3d": "Video en 3D de La Finca de Todos, mostrando su estructura, espacios e información.",
 		"titleAccessibility": "Consideraciones de accesibilidad",
 		"Cards-1": "Presencia de un intérprete de lengua de señas",
 		"Cards-2": "Caminos planos y amplios sin barreras arquitectónicas",
