Corregido La Finca

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -18,7 +18,7 @@
 	"navbar": {
 		"home": "Home",
 		"aboutUs": "About Us",
-		"theFarm": "The Farm",
+		"theFarm": "La Finca",
 		"weekendActivities": "Weekend Activities",
 		"educationalWorkshops": "Educational Workshops",
 		"location": "Location",
@@ -132,7 +132,7 @@
 		"title-2-Lissette": "Bachelors of Science in Communications from the University of Illinois at Urbana-Champaign",
 		"title-3-Lissette": "Juris Doctor from the University of Wisconsin-Madison",
 		"title-1-Fabiola": "Elementary school teacher with emphasis on teaching children with learning delays and special education",
-		"title-2-Fabiola": "Bachelor of Arts in Elementary Education from National Louis University",
+		"title-2-Fabiola": "Bachelors of Arts in Elementary Education from National Louis University",
 		"title-3-Fabiola": "Masters in Special Education from National Louis University"
 	},
 
@@ -163,7 +163,7 @@
 		"Cards-1": "Butterfly Farm",
 		"paragraphCards-1": "Observe a spectacle of colors in an accessible space dedicated to the breeding and conservation of butterflies.",
 		"Cards-2": "Accessible and elevated garden beds",
-		"paragraphCards-2": "We seek to recover contact with nature in an accessible way so we can have the experience of planting, caring for, and harvesting food.",
+		"paragraphCards-2": "We seek to recover contact with nature in an accessible way so you can have the experience of planting, caring for, and harvesting food.",
 		"Cards-3": "Accessible greenhouse with smart technology",
 		"paragraphCards-3": "In our accessible greenhouse, you can see smart technology implemented for lower energy use, environmental control software, and an intelligent irrigation system.",
 		"Cards-4": "Flight Simulator",
@@ -172,7 +172,7 @@
 		"Cards-5": "Sensory path and garden",
 		"paragraphCards-5": "Feel with your hands or feet the textures of the countryside, smell the essence of aromatic herbs, and explore a space full of surprises for your senses.",
 		"Cards-6": "Animals on the farm",
-		"paragraphCards-6": "Here we can interact with the animals of La Finca in a fully accessible environment to have the experience of milking a goat, feeding the chickens, or collecting eggs from the nests comfortably.",
+		"paragraphCards-6": "You can interact with farm animals in a fully accessible environment to have the experience of milking a goat, feeding the chickens, or collecting eggs from the nests comfortably.",
 		"Cards-7": "Zen Garden",
 		"paragraphCards-7": "A place to meditate, feel calm, and recharge positive energy in a quiet and accessible space. Design based on Zen principles and Japanese culture, this space favors serenity and meditation.",
 		"Cards-8": "Sustainable and accessible house",
