Organicé mayúsculas y cambié un texto  en la página Nosotros

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -128,7 +128,7 @@
 	"team": {
 		"team": "Team",
 		"projectCreator": "Project Creator",
-		"title-1-Lissette": "Attorney defending the rights of persons with disabilities and the elderly",
+		"title-1-Lissette": "Attorney defending the rights of persons with disabilities and older adults",
 		"title-2-Lissette": "Bachelors of Science in Communications from the University of Illinois at Urbana-Champaign",
 		"title-3-Lissette": "Juris Doctor from the University of Wisconsin-Madison",
 		"title-1-Fabiola": "Elementary school teacher with emphasis on teaching children with learning delays and special education",
@@ -213,7 +213,7 @@
 	"donate": {
 		"paragraph-1": "Your support is indispensable to creating the world of equality in which we want to live.",
 		"paragraph-2": "Thank you for your donation!",
-		"paragraph-3": "La Finca de Todos Foundation is a non-profit organization, registration number 20230143627.",
+		"paragraph-3": "La Finca de Todos Foundation is a non-profit organization, NIT 901707795-0.",
 		"paragraph-4": "Donate now"
 	},
 
