--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -121,14 +121,14 @@
 		"paragraphhowAreWeDoing-16": " para mitigar los",
 		"paragraphhowAreWeDoing-17": " desequilibrios sociales y la inequidad.",
 		"paragraphhowAreWeDoing-18": "La vice presidenta",
-		"paragraphhowAreWeDoing-19": " Francia Márquez dijo que el Ministerio de la igualdad será “un mecanismo para avanzar en la reducción efectiva de las brechas de desigualdad e inequidad en Colombia”.",
+		"paragraphhowAreWeDoing-19": " Francia Márquez dijo que el Ministerio de la Igualdad será “un mecanismo para avanzar en la reducción efectiva de las brechas de desigualdad e inequidad en Colombia”.",
 		"paragraphhowAreWeDoing-20": " forma parte de este llamado a la acción para la inclusión de todas las personas en nuestra sociedad y crear la accesibilidad para llegar a esa meta."
 	},
 
 	"team": {
 		"team": "Equipo",
 		"projectCreator": "Creadora del Proyecto",
-		"title-1-Lissette": "Abogada para los derechos de personas con discapacidades y mayores de edad",
+		"title-1-Lissette": "Abogada para los derechos de personas con discapacidades y adultos mayores",
 		"title-2-Lissette": "Licenciada en ciencias de la comunicación de la Universidad de Illinois en Urbana-Champaign",
 		"title-3-Lissette": "Licenciada en derecho de la Universidad de Wisconsin-Madison",
 		"title-1-Fabiola": "Docente para niños de primaria con retrasos de aprendizaje y educación especial",
@@ -214,7 +214,7 @@
 	"donate": {
 		"paragraph-1": "Tu apoyo es indispensable para crear el mundo de igualdad en el que queremos vivir.",
 		"paragraph-2": "¡Gracias por tu donación!",
-		"paragraph-3": "La Fundación La Finca de Todos es una Entidad sin ánimo de Lucro, número de registro 20230143627.",
+		"paragraph-3": "La Fundación La Finca de Todos es una Entidad sin ánimo de Lucro, NIT 901707795-0.",
 		"paragraph-4": "Donar ahora"
 	},
 
