--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -212,10 +212,30 @@
 	},
 
 	"donate": {
-		"paragraph-1": "Tu apoyo es indispensable para crear el mundo de igualdad en el que queremos vivir.",
-		"paragraph-2": "¡Gracias por tu donación!",
-		"paragraph-3": "La Fundación La Finca de Todos es una Entidad sin ánimo de Lucro, NIT 901707795-0.",
-		"paragraph-4": "Donar ahora"
+		"paragraph-1": "Tu apoyo es indispensable",
+		"paragraph-1-1": " para crear el mundo de igualdad en el que queremos vivir.",
+		"paragraph-2": "Dona hoy y sé parte de la historia!",
+		"paragraph-2-1":  "El 100% de tu aporte se destinará para construir el primer espacio en la naturaleza totalmente accesible para personas con discapacidades en Colombia.",
+		"paragraph-2-1-2":  "Con tu contribución única o mensual estas ayudando a llevar a cabo nuestra misión.",
+		"paragraph-3": "La Fundación", 
+		"paragraph-3-1": " es una Entidad sin ánimo de Lucro, NIT 901707795-0.",
+		"paragraph-4": "¿Cómo quieres hacer tu donación?",
+		"paragraph-option-1": "Donaciones desde Colombia",
+		"paragraph-option-2": "Donaciones desde el resto del mundo",
+		"paragraph-option-2-1": "*En la plataforma PayPal podrá realizar donaciones mensuales",
+		"paragraph-option-3": "Consignación o transferencia",
+		"paragraph-option-3-1": "Banco: Bancolombia",
+		"paragraph-option-3-2": "Tipo: Cuenta de Ahorros",
+		"paragraph-option-3-3": "Nº de cuenta: 829-000128-13",
+		"paragraph-option-3-4": "Código Banco: (SWIFT/BIC): COLOCOBM",
+		"paragraph-5": "*Solicita tu recibo deducible de impuestos e información para otras formas de donar al correo finca.todos@gmail.com",
+		"paragraph-6": "¡Gracias por tu donación!"
+
+
+
+
+
+
 	},
 
 	"educationalWorkshops": {
