Agrego botón Paypal

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -12,7 +12,8 @@
 		"iconInstagram": "Icon Instagram",
 		"iconFacebook": "Icon Facebook",
 		"iconEmail": "Icon Email",
-		"watch": "Watch"
+		"watch": "Watch",
+		"paypalCards": "Paypal cards"
 	},
 
 	"navbar": {
