--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -12,7 +12,8 @@
 		"iconInstagram": "Icono Instagram",
 		"iconFacebook": "Icono Facebook",
 		"iconEmail": "Icono Email",
-		"watch": "Reloj"
+		"watch": "Reloj",
+		"paypalCards": "Tarjetas Paypal"
 	},
 
 	"navbar": {
@@ -211,9 +212,9 @@
 		"paragraph-1": "Tu apoyo es indispensable",
 		"paragraph-1-1": " para crear el mundo de igualdad en el que queremos vivir.",
 		"paragraph-2": "Dona hoy y sé parte de la historia!",
-		"paragraph-2-1":  "El 100% de tu aporte se destinará para construir el primer espacio en la naturaleza totalmente accesible para personas con discapacidades en Colombia.",
-		"paragraph-2-1-2":  "Con tu contribución única o mensual estas ayudando a llevar a cabo nuestra misión.",
-		"paragraph-3": "La Fundación", 
+		"paragraph-2-1": "El 100% de tu aporte se destinará para construir el primer espacio en la naturaleza totalmente accesible para personas con discapacidades en Colombia.",
+		"paragraph-2-1-2": "Con tu contribución única o mensual estas ayudando a llevar a cabo nuestra misión.",
+		"paragraph-3": "La Fundación",
 		"paragraph-3-1": " es una Entidad sin ánimo de Lucro, NIT 901707795-0.",
 		"paragraph-4": "¿Cómo quieres hacer tu donación?",
 		"paragraph-option-1": "Donaciones desde Colombia",
