--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -13,7 +13,9 @@
 		"iconFacebook": "Icon Facebook",
 		"iconEmail": "Icon Email",
 		"watch": "Watch",
-		"paypalCards": "Paypal cards"
+		"paypalCards": "Paypal cards",
+		"donatePaypal": "Donate"
+
 	},
 
 	"navbar": {
@@ -217,8 +219,7 @@
 		"paragraph-3": "Foundation",
 		"paragraph-3-1": " is a non-profit organization, NIT 901707795-0.",
 		"paragraph-4": "How do you want to make your donation?",
-		"paragraph-option-1": "Donations from Colombia",
-		"paragraph-option-2": "Donations from the rest of the world",
+		"paragraph-option-2": "Donate with PayPal",
 		"paragraph-option-2-1": "*On the PayPal platform, you will be able to make monthly donations",
 		"paragraph-option-3": "Consignment or transfer",
 		"paragraph-option-3-1": "Bank: Bancolombia",
