--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -13,7 +13,8 @@
 		"iconFacebook": "Icono Facebook",
 		"iconEmail": "Icono Email",
 		"watch": "Reloj",
-		"paypalCards": "Tarjetas Paypal"
+		"paypalCards": "Tarjetas Paypal",
+		"donatePaypal": "Donar"
 	},
 
 	"navbar": {
@@ -217,8 +218,7 @@
 		"paragraph-3": "La Fundación",
 		"paragraph-3-1": " es una Entidad sin ánimo de Lucro, NIT 901707795-0.",
 		"paragraph-4": "¿Cómo quieres hacer tu donación?",
-		"paragraph-option-1": "Donaciones desde Colombia",
-		"paragraph-option-2": "Donaciones desde el resto del mundo",
+		"paragraph-option-2": "Donaciones con PayPal",
 		"paragraph-option-2-1": "*En la plataforma PayPal podrá realizar donaciones mensuales",
 		"paragraph-option-3": "Consignación o transferencia",
 		"paragraph-option-3-1": "Banco: Bancolombia",
