--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -218,7 +218,7 @@
 		"paragraph-3": "La Fundación",
 		"paragraph-3-1": " es una Entidad sin ánimo de Lucro, NIT 901707795-0.",
 		"paragraph-4": "¿Cómo quieres hacer tu donación?",
-		"paragraph-option-2": "Donaciones con PayPal",
+		"paragraph-option-2": "Donaciones con",
 		"paragraph-option-2-1": "*En la plataforma PayPal podrá realizar donaciones mensuales",
 		"paragraph-option-3": "Consignación o transferencia",
 		"paragraph-option-3-1": "Banco: Bancolombia",
