--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -13,7 +13,7 @@
 		"iconFacebook": "Icon Facebook",
 		"iconEmail": "Icon Email",
 		"watch": "Watch",
-		"paypalCards": "Paypal cards",
+		"paypalCards": "PayPal cards",
 		"donatePaypal": "Donate"
 
 	},
@@ -217,7 +217,7 @@
 		"paragraph-2-1": "100% of your contribution will go to building the first fully accessible space in nature for people with disabilities in Colombia.",
 		"paragraph-2-1-2": "With your one-time or monthly contribution, you are helping to carry out our mission.",
 		"paragraph-3": "Foundation",
-		"paragraph-3-1": " is a non-profit organization, NIT 901707795-0.",
+		"paragraph-3-1": " is a non-profit organization, NIT 901707795",
 		"paragraph-4": "How do you want to make your donation?",
 		"paragraph-option-2": "Donate with",
 		"paragraph-option-2-1": "*On the PayPal platform, you will be able to make monthly donations",
@@ -226,6 +226,9 @@
 		"paragraph-option-3-2": "Type: Savings Account",
 		"paragraph-option-3-3": "Account number: 829-000128-13",
 		"paragraph-option-3-4": "Bank Code: (SWIFT/BIC): COLOCOBM",
+		"paragraph-option-4-1": "Donate here",
+		"paragraph-option-4-2": "Using Bancolombia's QR code",
+		"paragraph-option-5": "The SWIFT code is necessary to make transfers from banks outside Colombia, it corresponds to the international code of the bank (Bancolombia).",
 		"paragraph-5": "Request your tax-deductible receipt or information about other options to donate by email finca.todos@gmail.com",
 		"paragraph-6": "Thank you for your donation!"
 	},
@@ -408,6 +411,8 @@
 	"donateAltText": {
 		"img-1": "Girl with Down Syndrome smiling",
 		"img-2": "Bancolombia logo",
-		"img-3": "Child in a chicken coop with a hen in his hands"
+		"img-3": "Bancolombia QR Code",
+		"img-4": "PayPal Logo",
+		"img-5": "Child in a chicken coop with a hen in his hands"
 	}
 }
