--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -13,7 +13,7 @@
 		"iconFacebook": "Icono Facebook",
 		"iconEmail": "Icono Email",
 		"watch": "Reloj",
-		"paypalCards": "Tarjetas Paypal",
+		"paypalCards": "Tarjetas PayPal",
 		"donatePaypal": "Donar"
 	},
 
@@ -216,7 +216,7 @@
 		"paragraph-2-1": "El 100% de tu aporte se destinará para construir el primer espacio en la naturaleza totalmente accesible para personas con discapacidades en Colombia.",
 		"paragraph-2-1-2": "Con tu contribución única o mensual estas ayudando a llevar a cabo nuestra misión.",
 		"paragraph-3": "La Fundación",
-		"paragraph-3-1": " es una Entidad sin ánimo de Lucro, NIT 901707795-0.",
+		"paragraph-3-1": " es una Entidad sin ánimo de Lucro, NIT 901707795",
 		"paragraph-4": "¿Cómo quieres hacer tu donación?",
 		"paragraph-option-2": "Donaciones con",
 		"paragraph-option-2-1": "*En la plataforma PayPal podrá realizar donaciones mensuales",
@@ -225,6 +225,9 @@
 		"paragraph-option-3-2": "Tipo: Cuenta de Ahorros",
 		"paragraph-option-3-3": "Nº de cuenta: 829-000128-13",
 		"paragraph-option-3-4": "Código Banco: (SWIFT/BIC): COLOCOBM",
+		"paragraph-option-4-1": "Dona aquí",
+		"paragraph-option-4-2": "Usando el código QR de Bancolombia",
+		"paragraph-option-5": "El código SWIFT es necesario para hacer transferencias desde Bancos fuera de Colombia, corresponde al código internacional del Banco (Bancolombia).",
 		"paragraph-5": "*Solicita tu recibo deducible de impuestos e información para otras formas de donar al correo finca.todos@gmail.com",
 		"paragraph-6": "¡Gracias por tu donación!"
 	},
@@ -407,6 +410,8 @@
 	"donateAltText": {
 		"img-1": "Niña con Síndrome de Down sonriendo",
 		"img-2": "Logo Bancolombia",
-		"img-3": "Niño en un gallinero con una gallina en sus manos"
+		"img-3": "Código QR Bancolombia",
+		"img-4": "Logo PayPal",
+		"img-5": "Niño en un gallinero con una gallina en sus manos"
 	}
 }
