Se organiza el responsive de algunos elementos de la página donaciones

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -211,13 +211,12 @@
 	},
 
 	"donate": {
-		"paragraph-1": "Your support is indispensable",
-		"paragraph-1-1": " to creating the world of equality in which we want to live.",
+		"paragraph-1": "Your support is indispensable to creating the world of equality in which we want to live.",
 		"paragraph-2": "Donate today and be part of history!",
 		"paragraph-2-1": "100% of your contribution will go to building the first fully accessible space in nature for people with disabilities in Colombia.",
 		"paragraph-2-1-2": "With your one-time or monthly contribution, you are helping to carry out our mission.",
 		"paragraph-3": "Foundation",
-		"paragraph-3-1": " is a non-profit organization, NIT 901707795",
+		"paragraph-3-1": " is a non-profit organization, NIT 901707795 ",
 		"paragraph-4": "How do you want to make your donation?",
 		"paragraph-option-2": "Donate with",
 		"paragraph-option-2-1": "*On the PayPal platform, you will be able to make monthly donations",
