--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -210,8 +210,7 @@
 	},
 
 	"donate": {
-		"paragraph-1": "Tu apoyo es indispensable",
-		"paragraph-1-1": " para crear el mundo de igualdad en el que queremos vivir.",
+		"paragraph-1": "Tu apoyo es indispensable para crear el mundo de igualdad en el que queremos vivir.",
 		"paragraph-2": "Dona hoy y sé parte de la historia!",
 		"paragraph-2-1": "El 100% de tu aporte se destinará para construir el primer espacio en la naturaleza totalmente accesible para personas con discapacidades en Colombia.",
 		"paragraph-2-1-2": "Con tu contribución única o mensual estas ayudando a llevar a cabo nuestra misión.",
