Se colocar el correo de la sección de donaciones en etiqueta a

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -227,7 +227,7 @@
 		"paragraph-option-4-1": "Donate here",
 		"paragraph-option-4-2": "Using Bancolombia's QR code",
 		"paragraph-option-5": "The SWIFT code is necessary to make transfers from banks outside Colombia, it corresponds to the international code of the bank (Bancolombia).",
-		"paragraph-5": "Request your tax-deductible receipt or information about other options to donate by email at finca.todos@gmail.com",
+		"paragraph-5": "Request your tax-deductible receipt or information about other options to donate by email at ",
 		"paragraph-6": "Thank you for your donation!"
 	},
 
