--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -227,7 +227,7 @@
 		"paragraph-option-4-1": "Dona aquí",
 		"paragraph-option-4-2": "Usando el código QR de Bancolombia",
 		"paragraph-option-5": "El código SWIFT es necesario para hacer transferencias desde Bancos fuera de Colombia, corresponde al código internacional del Banco (Bancolombia).",
-		"paragraph-5": "*Solicita tu recibo deducible de impuestos e información para otras formas de donar al correo finca.todos@gmail.com",
+		"paragraph-5": "*Solicita tu recibo deducible de impuestos e información para otras formas de donar al correo ",
 		"paragraph-6": "¡Gracias por tu donación!"
 	},
 
